--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ buildscript {
         compose_ui_version = '1.4.3'
         nav_version = "2.5.3"
         lifecycle_version = "2.5.1"
+         room_version = "2.5.1"
+
 
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -10,4 +12,5 @@ plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+
 }
